fix single task popup bottom white space

--- a/views/assets/src/helpers/less/customization/pm-overview.less
+++ b/views/assets/src/helpers/less/customization/pm-overview.less
@@ -1179,3 +1179,8 @@ div#pm-calender-page .project-select-area .form-content-wrap {
 // #wedevs-project-manager #pm-single-task-wrap .pm-task-comment-wrap .pm-comment-content {
 // 	margin-left: 44px !important;
 // }
+
+.pm-single-task-wrap .popup-container .popup-body {
+	height: 100% !important;
+	padding-bottom: 0px !important;
+}
